<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@color/black"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:textSize="24.5sp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/et_login_username"
            android:background="@color/white"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/et_register_password1"
            android:background="@color/white"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/et_register_password2"
            android:background="@color/white"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_lastname"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/et_register_name_lastname"
            android:background="@color/white"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_num"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/et_register_phone_num"
            android:inputType="phone"
            android:background="@color/white"
            android:textColor="@color/black"
            />
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
       		android:orientation="horizontal"
       		android:layout_marginTop="10dp"
        	android:layout_gravity="center">
            
            <ImageView 
            android:id = "@+id/img_selected_picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginRight="30dp"
            />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:padding="10dp"
            android:id="@+id/btn_select_picture"
            android:text="@string/select_picture"
            android:background="@color/white"
            android:layout_marginTop="10sp"
            />
        </LinearLayout>
        
        
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btn_finished"
            android:text="@string/finish"
            android:background="@color/white"
            android:layout_marginTop="10sp"
            android:padding="10dp"
            />
    </LinearLayout>


</ScrollView>
