<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:textSize="24.5sp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/login_username"
            android:background="@color/white"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/login_password"
            android:password="true"
            android:background="@color/white"
            android:textColor="@color/black"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/signin"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btn_login_signin"
            android:background="@color/black"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btn_login_signup"
            android:background="@color/black"
            />
         
 
	         
    </LinearLayout>


</LinearLayout>


