<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_main"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        />
    <TextView
        android:id="@+id/home_screen_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        style="@style/app_name_header"
        />

    <Button
        android:id="@+id/btn_report_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_centerInParent="true"
        android:text="@string/report_event"
        android:drawableLeft="@drawable/alert_icon"
        style="@style/home_button_rounded_overlay_tall"

        />

    <Button
        android:layout_below="@id/btn_report_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/browse_map"
        android:drawableLeft="@drawable/map_icon"
        style="@style/home_button_rounded_overlay_tall"

        />



</RelativeLayout>
